syntax = "proto3";

package grpc;

import "google/protobuf/timestamp.proto";

service SQLService {
    rpc GetBalance (WalletIdRequest) returns (BalanceResponse);
    rpc UpdateBalance (UpdateBalanceRequest) returns (Empty);
    rpc CreateTransaction (Transaction) returns (Empty);
    rpc GetTransactionID (TransactionId) returns (Transaction);
}

message WalletIdRequest {
    int32 wallet_id = 1;
}
message TransactionId {
    string transaction_id = 1;
}

message BalanceResponse {
    double balance = 1;
}

message UpdateBalanceRequest {
    int32 wallet_id = 1;
    double new_balance = 2;
}

message Transaction {
    string transaction_id = 1;
    int32 wallet_id = 2;
    double amount = 3;
    string type = 4;
    google.protobuf.Timestamp request_time = 5;
    string status = 6;
}

message Empty {}
